--- a/portal-quali-pessoas-main/package.json
+++ b/portal-quali-pessoas-main/package.json
@@ -5,13 +5,14 @@
   "description": "Portal Pessoas (RH e DP)",
   "type": "module",
   "scripts": {
-    "dev": "vite --mode development",
-    "hom": "vite --mode homologation",
-    "prd": "vite --mode production",
-    "build": "tsc -b && vite build",
+    "dev": "node server.js",  
+    "start": "pm2 start ecosystem.config.cjs --name \"portal-quali-pessoas-dev\" --env development", 
+    "start:hom": "pm2 start ecosystem.config.cjs --name \"portal-quali-pessoas-hom\" --env homologation", 
+    "start:prd": "pm2 start ecosystem.config.cjs --name \"portal-quali-pessoas-prd\" --env production", 
+    "build": "tsc -b && vite build", 
     "lint": "eslint .",
     "preview": "vite preview",
-    "build:staging": "vite build --mode homologation",
+    "build:staging": "tsc -b && vite build --mode homologation",
     "build:development": "tsc -b && vite build --mode development"
   },
   "author": "Claudio.Silva",
