--- a/portal-quali-pessoas-main/package.json
+++ b/portal-quali-pessoas-main/package.json
@@ -5,11 +5,11 @@
   "description": "Portal Pessoas (RH e DP)",
   "type": "module",
   "scripts": {
-    "dev": "node server.js",  
-    "start": "pm2 start ecosystem.config.cjs --name \"portal-quali-pessoas-dev\" --env development", 
-    "start:hom": "pm2 start ecosystem.config.cjs --name \"portal-quali-pessoas-hom\" --env homologation", 
-    "start:prd": "pm2 start ecosystem.config.cjs --name \"portal-quali-pessoas-prd\" --env production", 
-    "build": "tsc -b && vite build", 
+    "dev": "node server.js",
+    "start": "pm2 start ecosystem.config.cjs --name \"portal-quali-pessoas-dev\" --env development",
+    "start:hom": "pm2 start ecosystem.config.cjs --name \"portal-quali-pessoas-hom\" --env homologation",
+    "start:prd": "pm2 start ecosystem.config.cjs --name \"portal-quali-pessoas-prd\" --env production",
+    "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
     "build:staging": "tsc -b && vite build --mode homologation",
@@ -30,6 +30,7 @@
     "formik": "^2.4.6",
     "icons-material": "^0.0.1-security",
     "jspdf": "^3.0.1",
+    "papaparse": "^5.5.3",
     "portal-quali-pessoas": "file:",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
@@ -40,6 +41,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
+    "@types/papaparse": "^5.3.14",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
     "@types/react-router-dom": "^5.3.3",
