--- a/portal-quali-pessoas-main/package.json
+++ b/portal-quali-pessoas-main/package.json
@@ -37,6 +37,7 @@
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.1",
     "styled-components": "^6.1.19",
+    "xlsx": "^0.18.5",
     "yup": "^1.6.1"
   },
   "devDependencies": {
