--- a/portal-quali-pessoas-main/tsconfig.app.json
+++ b/portal-quali-pessoas-main/tsconfig.app.json
@@ -23,5 +23,5 @@
     "noFallthroughCasesInSwitch": true,
     "noUncheckedSideEffectImports": true
   },
-  "include": ["src", "server.js"]
+  "include": ["src", "server.js", "src/components/RelatoriosModal/RelatoriosModal.tsx"]
 }
