--- a/a1-gestao-de-vagas/package.json
+++ b/a1-gestao-de-vagas/package.json
@@ -26,9 +26,11 @@
   "dependencies": {
     "compression": "^1.8.0",
     "cors": "^2.8.5",
+    "csv-parse": "^6.1.0",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "mongoose": "^8.16.0",
+    "multer": "^2.0.2",
     "node-fetch": "^2.7.0",
     "nodemailer": "^7.0.3",
     "pg": "^8.16.2",
