--- a/portal-quali-pessoas-main/package.json
+++ b/portal-quali-pessoas-main/package.json
@@ -6,7 +6,9 @@
   "type": "module",
   "scripts": {
     "dev": "node server.js",
+    "dev:env": "dotenv -e .env.development node server.js",
     "start": "pm2 start ecosystem.config.cjs --name \"portal-quali-pessoas-dev\" --env development",
+    "start:devsrc": "pm2 start server.js --name portal-quali-pessoas-devsrc --env development",
     "start:hom": "pm2 start ecosystem.config.cjs --name \"portal-quali-pessoas-hom\" --env homologation",
     "start:prd": "pm2 start ecosystem.config.cjs --name \"portal-quali-pessoas-prd\" --env production",
     "build": "tsc -b && vite build",
@@ -47,6 +49,7 @@
     "@types/react-dom": "^19.1.2",
     "@types/react-router-dom": "^5.3.3",
     "@vitejs/plugin-react": "^4.4.1",
+    "dotenv-cli": "^7.4.4",
     "eslint": "^9.25.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
